# gbc

./: .gitignore  LICENSE  README.md  gbc.sublime-project  gbc.sublime-workspace  todo
2d/: CMakeLists.txt  main.cpp
2d/coords/: AffineR2.hpp  BilinearR2.hpp  CubicMeanValueR2.hpp  DiscreteHarmonicR2.hpp  GordonWixomR2.hpp  HarmonicR2.hpp  LaplaceR2.hpp  LocalR2.hpp  MaximumEntropyR2.hpp  MeanValueR2.hpp  MetricR2.hpp  PoissonR2.hpp  PositiveGordonWixomR2.hpp  PositiveMeanValueR2.hpp  SibsonR2.hpp  ThreePointsR2.hpp  WachspressR2.hpp
2d/extra/: AllCoordinatesR2.hpp  BarycentricCoordinatesR2.hpp  BarycentricWrapperR2.hpp  Face.hpp  Halfedge.hpp  IsolinerR2.hpp  MeshR2.hpp  SegmentCoordinatesR2.hpp  TestCoordinates.hpp  TestCoordinatesR2.hpp  TriangleCoordinatesR2.hpp  TriangulatorR2.hpp  VertexExpressionsR2.hpp  VertexR2.hpp
2d/extra/libs/gaussinteg/: gauss_legendre.cpp  gauss_legendre.hpp
2d/extra/libs/lbcsolver/: DataSetup.hpp  DataTypes.hpp  LbcSolver.hpp
2d/extra/libs/triangle/: triangle.cpp  triangle.hpp
